Adding test suites according to homework 03 (and more).

--- a/build.gradle
+++ b/build.gradle
@@ -59,9 +59,11 @@ dependencies {
 }
 
 test {
-    filter {
-        includeTestsMatching "org.wahlzeit.*"
-    }
+
+    include "AllTests.class"
+    /*filter {    
+         includeTestsMatching "org.wahlzeit.*"
+    }*/
     testLogging {
             events "passed", "skipped", "failed"
 
